--- a/m/qui_suis-je.html
+++ b/m/qui_suis-je.html
@@ -6,9 +6,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-        <link rel="stylesheet" href="data/css/style-qui_suis-je.css">
-        <link rel="stylesheet" href="data/css/nav.css">
+        <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
+        <link rel="stylesheet" href="css/style-qui_suis-je.css">
+        <link rel="stylesheet" href="css/nav.css">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
@@ -17,19 +17,34 @@
     <body>
         <div class="fjaune">
             <nav>
-                <a href="index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
-                <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
-                <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-                <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
-                <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
-                <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">BE</button></a>
-                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">IN</button></a>
-            </nav>
+                <div class="navbar">
+                  <div class="container nav-container">
+                      <input class="checkbox" type="checkbox" name="" id="" />
+                    <div class="logo">
+                      <h1>Nav</h1>
+                    </div>
+                      <div class="hamburger-lines">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
+                      </div>  
+                    <div class="menu-items">
+                      <li><a href="index.html">Accueil</a></li>
+                      <li><a href="index.html#projets">Projets</a></li>
+                      <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
+                      <li><a href="contact.html">Contact</a></li>
+                      <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button>Mon CV</button></a></li>
+                      <li><a href="https://www.behance.net/mthillayisnard"><button>Mon CV</button></a></li>
+                      <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button>Mon CV</button></a></li>
+                    </div>
+                  </div>
+                </div>
+              </nav>
 
             <div class="container-header">
                 <div class="header">
                     <div class="header-column-left">
-                        <img src="data/imgs/qui-suis-je/manon-enfant.png" alt="Image de Manon Thillay-Isnard enfant" class="manon-enfant">
+                        <img src="../data/imgs/qui-suis-je/manon-enfant.png" alt="Image de Manon Thillay-Isnard enfant" class="manon-enfant">
                     </div>
                     <div class="header-column-right">
                         <h2 class="hello">Hello,</h2>
