--- a/m/index.html
+++ b/m/index.html
@@ -9,9 +9,9 @@
     <meta name="description" content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
     <meta http-equiv="refresh" content="3600">
 
-    <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="data/css/style-index.css">
-    <link rel="stylesheet" href="data/css/nav.css">
+    <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style-index.css">
+    <link rel="stylesheet" href="css/nav.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
@@ -25,19 +25,34 @@
 <body>
     <div class="fjaune" id="start">
         <nav>
-            <a href="index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
-            <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
-            <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-            <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">BE</button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">IN</button></a>
-        </nav>
+            <div class="navbar">
+              <div class="container nav-container">
+                  <input class="checkbox" type="checkbox" name="" id="" />
+                <div class="logo">
+                  <img src="../data/imgs/all/MTI.png" alt="Logo">
+                </div>
+                  <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                  </div>  
+                <div class="menu-items">
+                  <li><a href="index.html">Accueil</a></li>
+                  <li><a href="index.html#projets">Projets</a></li>
+                  <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button>Mon CV</button></a></li>
+                  <li><a href="https://www.behance.net/mthillayisnard"><button>Mon CV</button></a></li>
+                  <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button>Mon CV</button></a></li>
+                </div>
+              </div>
+            </div>
+          </nav>
 
         <div class="container-header">
             <div class="header">
                 <div class="header-column-left">
-                    <img src="data/imgs/index/img-manon-acc.png" alt="Image de Manon Thillay-Isnard" class="img-manon-acc">
+                    <img src="../data/imgs/index/img-manon-acc.png" alt="Image de Manon Thillay-Isnard" class="img-manon-acc">
                 </div>
                 <div class="header-column-right">
                     <h2 class="hello">Hello,</h2>
@@ -67,7 +82,7 @@
         <div class="container-projects-cards">
             <div class="box-card">
                 <a href="leria.html">
-                    <img src="data/imgs/index/leria.jpg" alt="Image d'illustration du projet Leria." class="project-img">
+                    <img src="../data/imgs/index/leria.jpg" alt="Image d'illustration du projet Leria." class="project-img">
                 </a>
                 <h3 class="project-title">Leria</h3>
                 <p class="project-subtitle">Création Web</p>
@@ -86,7 +101,7 @@
             </div>
             <div class="box-card">
                 <a href="sylvassur.html">
-                    <img src="data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur." class="project-img">
+                    <img src="../data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur." class="project-img">
                 </a>
                 <h3 class="project-title">Sylvassur</h3>
                 <p class="project-subtitle">Création Web & vidéos tutos</p>
@@ -105,7 +120,7 @@
             </div>
             <div class="box-card">
                 <a href="autopanneassur.html">
-                    <img src="data/imgs/index/autopanneassur.jpg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
+                    <img src="../ata/imgs/index/autopanneassur.jpg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
                 </a>
                 <h3 class="project-title">AutoPanneAssur</h3>
                 <p class="project-subtitle">Création Web</p>
@@ -124,7 +139,7 @@
             </div>
             <div class="box-card">
                 <a href="l'acoste.html">
-                    <img src="data/imgs/index/l'acoste.jpg" alt="Image d'illustration du projet L’ACOSTE." class="project-img">
+                    <img src="../data/imgs/index/l'acoste.jpg" alt="Image d'illustration du projet L’ACOSTE." class="project-img">
                 </a>
                 <h3 class="project-title">L’ACOSTE</h3>
                 <p class="project-subtitle">Refonte de l’identité & création d’app</p>
@@ -143,7 +158,7 @@
             </div>
             <div class="box-card">
                 <a href="gfa.html">
-                    <img src="data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding." class="project-img">
+                    <img src="../data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding." class="project-img">
                 </a>
                 <h3 class="project-title">GFA Funding</h3>
                 <p class="project-subtitle">Création d’identité</p>
@@ -162,7 +177,7 @@
             </div>
             <div class="box-card">
                 <a href="bouygues-telecom.html">
-                    <img src="data/imgs/index/bouygues-telecom.jpg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
+                    <img src="../data/imgs/index/bouygues-telecom.jpg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
                 </a>
                 <h3 class="project-title">Bouygues Telecom</h3>
                 <p class="project-subtitle">Proposition de solution</p>
@@ -182,7 +197,7 @@
         </div>
     </div>
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+        <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
