--- a/m/leria.html
+++ b/m/leria.html
@@ -7,10 +7,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="data/css/style-Leria.css">
-    <link rel="stylesheet" href="data/css/nav.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style-Leria.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins'>
 
     <script src="../data/js/device-redirect-mobile.js"></script>
 </head>
@@ -18,14 +18,29 @@
 <body>
     <div class="header-background">
         <nav>
-            <a href="index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
-            <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
-            <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-            <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">BE</button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">IN</button></a>
-        </nav>
+            <div class="navbar">
+              <div class="container nav-container">
+                  <input class="checkbox" type="checkbox" name="" id="" />
+                <div class="logo">
+                  <h1>Nav</h1>
+                </div>
+                  <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                  </div>  
+                <div class="menu-items">
+                  <li><a href="index.html">Accueil</a></li>
+                  <li><a href="index.html#projets">Projets</a></li>
+                  <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button>Mon CV</button></a></li>
+                  <li><a href="https://www.behance.net/mthillayisnard"><button>Mon CV</button></a></li>
+                  <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button>Mon CV</button></a></li>
+                </div>
+              </div>
+            </div>
+          </nav>
 
         <div class="header">
             <div class="box-top-header">
@@ -86,7 +101,7 @@
                 lanc&#233; et j'ai pu
                 le d&#233;couvrir avec elle et d&#233;couvrir en m&#234;me temps les codes que j'allais derri&#232;re
                 appliquer au site.</p>
-            <img class="logo_leria" src="data/imgs/leria/Leria.png" alt="">
+            <img class="logo_leria" src="../data/imgs/leria/Leria.png" alt="">
 
         </div>
 
@@ -106,7 +121,7 @@
                 d&#8217;&#234;tre un site vitrine et qui sera le support du lancement de LERIA. En effet, les filles de
                 l&#8217;&#233;quipe ont d&#233;j&#224; leur propre r&#233;putation/client sur le march&#233; des risques
                 l&#233;gaux. </p>
-            <img class="logo_wireframes" src="data/imgs/leria/Wireframes.png" alt="">
+            <img class="logo_wireframes" src="../data/imgs/leria/Wireframes.png" alt="">
 
         </div>
 
@@ -140,15 +155,15 @@
             </div>
 
             <div class="wireframes">
-                <img class="logo_wireframes" src="data/imgs/leria/Wordpress  – LERIA-1 1.png" alt="">
+                <img class="logo_wireframes" src="../data/imgs/leria/Wordpress  – LERIA-1 1.png" alt="">
             </div>
 
             <div class="img_renouvelable_immobilier">
                 <div class="image_container">
-                    <img class="logo_renouvelable" src="data/imgs/leria/Énergies renouvelables – LERIA-1 1.png" alt="">
+                    <img class="logo_renouvelable" src="../data/imgs/leria/Énergies renouvelables – LERIA-1 1.png" alt="">
                 </div>
                 <div class="image_container">
-                    <img class="logo_imobilier" src="data/imgs/leria/Immobilier – LERIA-1 1.png" alt="">
+                    <img class="logo_imobilier" src="../data/imgs/leria/Immobilier – LERIA-1 1.png" alt="">
                 </div>
             </div>
     </div>
@@ -168,12 +183,14 @@
             </div>
 
 
-            <div class="footer">
-                <button class="btn_footer_manon">T&#233;l&#233;charger mon CV</button>
-                <p class="text_footer_manon">@mthillayisnard 2023</p>
-                <img class="logo_footer_manon" src="data/imgs/all/logo-behance-noir.png" alt="">
-                <img class="logo_footer_manon" src="data/imgs/all/logo-linkedin-noir.png" alt="">
-            </div>
+            <footer>
+                <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+                <p class="p-footer">@mthillayisnard
+                    <script>document.write(new Date().getFullYear())</script>
+                </p>
+                <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
+                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+            </footer>
 </body>
 
 </html>
