--- a/m/qui_suis-je.html
+++ b/m/qui_suis-je.html
@@ -20,9 +20,9 @@
                 <div class="navbar">
                   <div class="container nav-container">
                       <input class="checkbox" type="checkbox" name="" id="" />
-                    <div class="logo">
-                      <h1>Nav</h1>
-                    </div>
+                      <div class="logo">
+                        <img src="../data/imgs/all/MTI.png" alt="Logo">
+                      </div>
                       <div class="hamburger-lines">
                         <span class="line line1"></span>
                         <span class="line line2"></span>
