le je suis est toujours au dessus du menu de nav

--- a/m/index.html
+++ b/m/index.html
@@ -49,12 +49,11 @@
             </div>
           </nav>
 
-        <div class="container-header">
             <div class="header">
-                <div class="header-column-left">
+                <div class="box-img-header">
                     <img src="../data/imgs/index/img-manon-acc.png" alt="Image de Manon Thillay-Isnard" class="img-manon-acc">
                 </div>
-                <div class="header-column-right">
+                <div class="int-header">
                     <h2 class="hello">Hello,</h2>
                     <div class="vertical-p-container">
                         <p class="vertical-p">je suis</p>
@@ -67,7 +66,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
     <div class="f-project">
         <div class="box-h2projet">
