fin index mobile

--- a/m/index.html
+++ b/m/index.html
@@ -118,7 +118,7 @@
             </div>
             <div class="box-card">
                 <a href="autopanneassur.html">
-                    <img src="../ata/imgs/index/autopanneassur.jpg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
+                    <img src="../data/imgs/index/autopanneassur.jpg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
                 </a>
                 <h3 class="project-title">AutoPanneAssur</h3>
                 <p class="project-subtitle">Création Web</p>
@@ -199,8 +199,8 @@
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+        <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance.png" class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="../data/imgs/all/logo-linkedin.png" class="img-footer"></a>
     </footer>
 </body>
 </html>
