--- a/m/contact.html
+++ b/m/contact.html
@@ -18,30 +18,30 @@
 
 <body>
     <div class="fjaune">
-        <nav>
-            <div class="navbar">
-              <div class="container nav-container">
-                  <input class="checkbox" type="checkbox" name="" id="" />
-                  <div class="logo">
-                    <img src="../data/imgs/all/MTI.png" alt="Logo">
-                  </div>
-                  <div class="hamburger-lines">
-                    <span class="line line1"></span>
-                    <span class="line line2"></span>
-                    <span class="line line3"></span>
-                  </div>  
-                <div class="menu-items">
-                  <li><a href="index.html">Accueil</a></li>
-                  <li><a href="index.html#projets">Projets</a></li>
-                  <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                  <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button>Mon CV</button></a></li>
-                  <li><a href="https://www.behance.net/mthillayisnard"><button>Mon CV</button></a></li>
-                  <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button>Mon CV</button></a></li>
-                </div>
-              </div>
+      <nav>
+        <div class="navbar">
+          <div class="container nav-container">
+              <input class="checkbox" type="checkbox" name="" id="" />
+            <div class="logo">
+              <img src="../data/imgs/all/MTI.png" alt="Logo">
             </div>
-          </nav>
+              <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+              </div>  
+            <div class="menu-items">
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="index.html#projets">Projets</a></li>
+              <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="nav_btn-cv">Mon CV</button></a></li>
+              <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn"></button></a></li>
+              <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
+            </div>
+          </div>
+        </div>
+      </nav>
         <footer>
             <p class="p-footer">@mthillayisnard
                 <script>document.write(new Date().getFullYear())</script>
