footer css séparé et changement marge fond rose leria

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="data/css/style-index.css">
     <link rel="stylesheet" href="data/css/nav.css">
+    <link rel="stylesheet" href="data/css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
