--- a/leria.html
+++ b/leria.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="data/css/style-Leria.css">
     <link rel="stylesheet" href="data/css/nav.css">
+    <link rel="stylesheet" href="data/css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
     <script src="data/js/device-redirect-computer.js"></script>
