changement des nom d'images

--- a/leria.html
+++ b/leria.html
@@ -187,7 +187,7 @@
             que des appels &agrave; l'action directs vers les offres, en plus du menu.
         </p>
         <div class="box-img-page-principale-leria">
-            <img src="data/imgs/leria/Wordpress  – LERIA-1 1.jpg" alt="Image de la page d'accueil de LERIA"
+            <img src="data/imgs/leria/Wordpress–LERIA.jpg" alt="Image de la page d'accueil de LERIA"
                 class="img-page-principale-leria">
         </div>
         <p class="text-corp">
@@ -203,7 +203,7 @@
         <div class="box-img-page-presentation-leria">
             <img src="data/imgs/leria/&eacute;nergies renouvelables – LERIA-1 1.jpg"
                 alt="Image de la page de pr&eacute;sentation de LERIA" class="img-page-presentation-leria">
-            <img src="data/imgs/leria/Immobilier – LERIA-1 1.jpg" alt="Image de la page de pr&eacute;sentation de LERIA"
+            <img src="data/imgs/leria/Immobilier–LERIA.jpg" alt="Image de la page de pr&eacute;sentation de LERIA"
                 class="img-page-presentation-leria">
         </div>
         <p class="text-corp">
