bug fix img leria

--- a/leria.html
+++ b/leria.html
@@ -201,7 +201,7 @@
             d'utiliser des pictogrammes pour soulager la vue.
         </p>
         <div class="box-img-page-presentation-leria">
-            <img src="data/imgs/leria/&eacute;nergies renouvelables – LERIA-1 1.jpg"
+            <img src="data/imgs/leria/energies_renouvelables___LERIA.jpg"
                 alt="Image de la page de pr&eacute;sentation de LERIA" class="img-page-presentation-leria">
             <img src="data/imgs/leria/Immobilier–LERIA.jpg" alt="Image de la page de pr&eacute;sentation de LERIA"
                 class="img-page-presentation-leria">
