--- a/leria.html
+++ b/leria.html
@@ -187,7 +187,7 @@
             que des appels &agrave; l'action directs vers les offres, en plus du menu.
         </p>
         <div class="box-img-page-principale-leria">
-            <img src="data/imgs/leria/Wordpress–LERIA.jpg" alt="Image de la page d'accueil de LERIA"
+            <img src="data/imgs/leria/Wordpress-LERIA.jpg" alt="Image de la page d'accueil de LERIA"
                 class="img-page-principale-leria">
         </div>
         <p class="text-corp">
