copie v fixe -> v mobile

--- a/m/leria.html
+++ b/m/leria.html
@@ -2,77 +2,90 @@
 <html lang="frfr">
 
 <head>
-    <title>mLeria</title>
+    <title>Leria | mthillayisnard.fr</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style-Leria.css">
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins'>
+    <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
+    <link rel="stylesheet" href="data/css/style-Leria.css">
+    <link rel="stylesheet" href="data/css/nav.css">
+    <link rel="stylesheet" href="data/css/footer.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
-    <script src="../data/js/device-redirect-mobile.js"></script>
+    <script src="data/js/device-redirect-computer.js"></script>
 </head>
 
 <body>
     <div class="header-background">
         <nav>
-            <div class="navbar">
-              <div class="container nav-container">
-                  <input class="checkbox" type="checkbox" name="" id="" />
-                <div class="logo">
-                  <img src="../data/imgs/all/MTI.png" alt="Logo">
-                </div>
-                  <div class="hamburger-lines">
-                    <span class="line line1"></span>
-                    <span class="line line2"></span>
-                    <span class="line line3"></span>
-                  </div>  
-                <div class="menu-items">
-                  <li><a href="index.html">Accueil</a></li>
-                  <li><a href="index.html#projets">Projets</a></li>
-                  <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                  <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="nav_btn-cv">Mon CV</button></a></li>
-                  <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn"></button></a></li>
-                  <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
-                </div>
-              </div>
-            </div>
+            <a href="index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
+            <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
+            <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
+            <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
+            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
+            <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">BE</button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">IN</button></a>
         </nav>
 
         <div class="header">
             <div class="box-top-header">
-                <p class="le">le</p>
-                <p class="create_site">projet de cr&#233;ation de site</p>
+                <p class="le">
+                    le
+                </p>
+                <p class="create_site">
+                    projet de cr&#233;ation de site
+                </p>
             </div>
             <div class="box-header-bot">
-                <h1 class="GFA_Funding">Leria</h1>
+                <h1 class="Leria">
+                    Leria
+                </h1>
             </div>
             <div>
-                <button class="btn_decouvrir_site">D&#233;couvrir le site</button>
+                <button class="btn_decouvrir_site">
+                    D&#233;couvrir le site
+                </button>
             </div>
         </div>
         <table class="t1">
             <tr>
-                <th style="width:45%">R&#233;sum&#233;/brief</th>
-                <th style="width:35%">&Eacute;quipe</th>
-                <th style="width:20%">Logiciels</th>
+                <th class="title-table1">
+                    r&#233;sum&#233;/brief
+
+                </th>
+                <th class="title-table2">
+                    &eacute;quipe
+
+                </th>
+                <th class="title-table3">
+                    logiciels
+
+                </th>
             </tr>
             <tr>
-                <td>J&#8217;ai d&#251; accompagn&#233; la cr&#233;ation d&#8217;une filiale et les ai accompagn&#233;
-                    lors de la cr&#233;ation de leur site web en cherchant ensemble comment pr&#233;senter le tout.</td>
-                <td>J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.</td>
-                <td>Wordpress <br>
-                    Evolvetree <br>
-                    Miro <br>
-                    Word</td>
+                <td>
+                    J&#8217;ai d&#251; accompagn&#233; la cr&#233;ation d&#8217;une filiale et les ai accompagn&#233;
+                    lors de la cr&#233;ation de leur site web en cherchant ensemble comment pr&#233;senter le tout.
+                </td>
+                <td>
+                    J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.
+                </td>
+                <td>
+                    Wordpress
+                    <br>
+                    Evolvetree
+                    <br>
+                    Miro
+                    <br>
+                    Word
+                </td>
             </tr>
         </table>
     </div>
-    <div class="black">
-        <div class="box-h2projet">
+    <img src="data/imgs/leria/LERIA-eolienne.jpg" alt="Illustration d'une &eacute;olienne" class="img-eolienne">
+    <div class="background-white">
+        <div class="box-h2">
             <div class="box-le2">
                 <p class="txt-le2">le</p>
             </div>
@@ -80,117 +93,158 @@
                 projet
             </h2>
         </div>
-        <div class="projet">C&#8217;est <b>quoi</b> LERIA ? <br><br>
-
-            LERIA accompagne ses clients en leur proposant une solution d'assurance de qualit&#233; afin de permettre et
-            de faciliter le d&#233;veloppement et financement de projets sous recours. <br><br>
-
-            J'ai pu <b>suivre l'&#233;quipe</b> lors du processus de cr&#233;ation de l'entreprise. De ce fait, l'ai pu
-            comprendre leur offre au mieux et comprendre le site <b>le plus adapt&#233;</b> &#224; faire. <br><br>
-
-            Le <b>but</b> de ce site ? <br><br>
-
-            Les risques l&#233;gaux sont un secteur de niche tr&#232;s ferm&#233; et se font avec du
-            bouche-&#224;-oreille. L'id&#233;e ici &#233;tait d'avoir un site vitrine &#224; envoyer aux clients mais
-            surtout qui permettent aux dames lan&#231;ant le projet de partager &#231;a &#224; leurs r&#233;seaux.
+        <div class="text-corp">
+            Qu'est ce que LERIA ?
+            <br>
+            <br>
+            LERIA accompagne ses clients en leur proposant une solution d'assurance de qualit&eacute; afin de faciliter
+            le
+            d&eacute;veloppement et le financement de projets soumis &agrave; des litiges.
+            <br>
+            <br>
+            J'ai pu suivre l'&eacute;quipe tout au long du processus de cr&eacute;ation de l'entreprise, ce qui m'a
+            permis de mieux
+            comprendre leur offre et de d&eacute;terminer le site le plus adapt&eacute; &agrave; leurs besoins.
+            <br>
+            <br>
+            Quel est le but de ce site ?
+            <br>
+            <br>
+            &eacute;tant donn&eacute; que le secteur des risques l&eacute;gaux est tr&egrave;s sp&eacute;cialis&eacute;
+            et bas&eacute; sur le bouche-&agrave;-oreille,
+            l'objectif &eacute;tait de cr&eacute;er un site vitrine &agrave; partager avec les clients, mais surtout de
+            permettre aux membres
+            f&eacute;minins de l'&eacute;quipe de le partager avec leurs r&eacute;seaux.
+            <br>
+            <br>
         </div>
-    </div>
-    <div class="background_white">
-        <div class="flex_logo">
-            <p class="text_logo_leria">Avant d'avoir rejoins le projet, la conception du logo avait &#233;t&#233;
-                lanc&#233; et j'ai pu
-                le d&#233;couvrir avec elle et d&#233;couvrir en m&#234;me temps les codes que j'allais derri&#232;re
-                appliquer au site.</p>
-            <img class="logo_leria" src="../data/imgs/leria/Leria.png" alt="">
-
+        <p class="text-corp">
+            Avant d'avoir rejoins le projet, la conception du logo avait &#233;t&#233;
+            lanc&#233; et j'ai pu
+            le d&#233;couvrir avec elle et d&#233;couvrir en m&#234;me temps les codes que j'allais derri&#232;re
+            appliquer au site.
+        </p>
+        <div class="box-logo-leria">
+            <img class="logo_leria" src="data/imgs/leria/Leria.png" alt="Logo de LERIA">
         </div>
 
-        <div class="box-h2projet">
+        <div class="box-h2">
             <div class="box-le">
-                <p class="txt-le">les</p>
+                <p class="txt-le">
+                    les
+                </p>
             </div>
             <h2 class="titre_rose">
                 Wireframes
             </h2>
         </div>
 
-        <div class="wireframes">
-            <p class="text_logo_wireframes">Apr&#232;s avoir &#233;chang&#233; avec l&#8217;&#233;quipe pour un peu plus
-                comprendre leur coeur de m&#233;tier et comprendre ce qu&#8217;elle voulait pr&#233;senter &#224; leur
-                client, j&#8217;ai pu commencer &#224; travailler de mon c&#244;t&#233;. Ce site &#224; pour but
-                d&#8217;&#234;tre un site vitrine et qui sera le support du lancement de LERIA. En effet, les filles de
-                l&#8217;&#233;quipe ont d&#233;j&#224; leur propre r&#233;putation/client sur le march&#233; des risques
-                l&#233;gaux. </p>
-            <img class="logo_wireframes" src="../data/imgs/leria/Wireframes.png" alt="">
-
+        <p class="text-corp">
+            Apr&#232;s avoir &#233;chang&#233; avec l&#8217;&#233;quipe pour un peu plus
+            comprendre leur coeur de m&#233;tier et comprendre ce qu&#8217;elle voulait pr&#233;senter &#224; leur
+            client, j&#8217;ai pu commencer &#224; travailler de mon c&#244;t&#233;. Ce site &#224; pour but
+            d&#8217;&#234;tre un site vitrine et qui sera le support du lancement de LERIA. En effet, les filles de
+            l&#8217;&#233;quipe ont d&#233;j&#224; leur propre r&#233;putation/client sur le march&#233; des risques
+            l&#233;gaux.
+        </p>
+        <div class="box-img_wireframes">
+            <img class="img_wireframes" src="data/imgs/leria/Wireframes.jpg"
+                alt="Image d'illustation pour les wireframes">
         </div>
-
-        <div class="black">
-            <div class="box-h2projet">
-                <div class="box-le">
-                    <p class="txt-le">la</p>
-                </div>
-                <h2 class="titre_rose">
-                    galerie
-                </h2>
+    </div>
+    <div class="background_rose">
+        <div class="box-h2">
+            <div class="box-le">
+                <p class="txt-le">le</p>
             </div>
-            <div class="site_noir">
-            </div>
+            <h2 class="titre_rose">
+                site
+            </h2>
         </div>
-
-        <div class="background_white">
-            <div class="box-h2projet">
-                <div class="box-le">
-                    <p class="txt-le">le</p>
-                </div>
-                <h2 class="titre_rose">
-                    site
-                </h2>
+        <div class="text-corp">Pour ce projet, j&#8217;ai du mettre les mains dans le
+            cambouis et r&#233;aliser
+            le site sur Wordpress. J&#8217;ai d&#233;cid&#233; de partir avec une base et de trouver un template
+            compatible avec Wordpress. Avec les caract&#233;ristiques discut&#233;es avant et les wireframes et
+            contenus valid&#233; j&#8217;ai pu me mettre &#224; chercher le template id&#233;al.
+        </div>
+    </div>
+    <div class="background-white">
+        <div class="box-h2">
+            <div class="box-le">
+                <p class="txt-le">l'</p>
             </div>
-            <div class="site_blanc">Pour ce projet, j&#8217;ai du mettre les mains dans le
-                cambouis et r&#233;aliser
-                le site sur Wordpress. J&#8217;ai d&#233;cid&#233; de partir avec une base et de trouver un template
-                compatible avec Wordpress. Avec les caract&#233;ristiques discut&#233;es avant et les wireframes et
-                contenus valid&#233; j&#8217;ai pu me mettre &#224; chercher le template id&#233;al.
+            <h2 class="titre_rose">
+                interface du site
+            </h2>
+        </div>
+        <p class="text-corp">
+            <b>
+                La page principale
+            </b>
+            <br>
+            <br>
+            La page se veut simple et &eacute;pur&eacute;e, pr&eacute;sentant les informations sur l'offre LERIA, ainsi
+            que des appels &agrave; l'action directs vers les offres, en plus du menu.
+        </p>
+        <div class="box-img-page-principale-leria">
+            <img src="data/imgs/leria/Wordpress-LERIA.jpg" alt="Image de la page d'accueil de LERIA"
+                class="img-page-principale-leria">
+        </div>
+        <p class="text-corp">
+            <b>
+                La page pr&eacute;sentation produit
+            </b>
+            <br>
+            <br>
+            La demande &eacute;tait la suivante : lire le texte de haut en bas et avoir la volont&eacute; de faire
+            d&eacute;filer. La page devait &ecirc;tre a&eacute;r&eacute;e et chaque fois que possible, nous avons choisi
+            d'utiliser des pictogrammes pour soulager la vue.
+        </p>
+        <div class="box-img-page-presentation-leria">
+            <img src="data/imgs/leria/energies_renouvelables___LERIA.jpg"
+                alt="Image de la page de pr&eacute;sentation de LERIA" class="img-page-presentation-leria">
+            <img src="data/imgs/leria/Immobilier–LERIA.jpg" alt="Image de la page de pr&eacute;sentation de LERIA"
+                class="img-page-presentation-leria">
+        </div>
+        <p class="text-corp">
+            <b>
+                L'&eacute;quipe
+            </b>
+            <br>
+            <br>
+            La demande &eacute;tait la suivante : lire le texte de haut en bas et avoir la volont&eacute; de faire
+            d&eacute;filer. La page devait &ecirc;tre a&eacute;r&eacute;e et chaque fois que possible, nous avons choisi
+            d'utiliser des pictogrammes pour soulager la vue.
+        </p>
+    </div>
+    <div class="background_rose">
+        <div class="box-h2">
+            <div class="box-le">
+                <p class="txt-le">
+                    la
+                </p>
             </div>
-
-            <div class="wireframes">
-                <img class="logo_wireframes" src="../data/imgs/leria/Wordpress  – LERIA-1 1.png" alt="">
-            </div>
-
-            <div class="img_renouvelable_immobilier">
-                <div class="image_container">
-                    <img class="logo_renouvelable" src="../data/imgs/leria/Énergies renouvelables – LERIA-1 1.png" alt="">
-                </div>
-                <div class="image_container">
-                    <img class="logo_imobilier" src="../data/imgs/leria/Immobilier – LERIA-1 1.png" alt="">
-                </div>
-            </div>
+            <h2 class="titre_rose">
+                conclusion
+            </h2>
+        </div>
+        <p class="text-corp">
+            Ce projet a été l'un des plus faciles à réaliser grâce à une équipe claire et précise dans ses idées.
+            L'élément challengeant a été le template choisi, j'ai dû apprendre à le manipuler et le personnaliser. Le
+            projet a pu être terminé en deux mois et aujourd'hui je suis toujours chargée de m'occuper des mises à jour.
+        </p>
     </div>
 
-            <div class="black">
-                <div class="box-h2projet">
-                    <div class="box-le">
-                        <p class="txt-le">la</p>
-                    </div>
-                    <h2 class="titre_rose">
-                        conclusion
-                    </h2>
-                </div>
-                <div class="text_conclusion">Ce projet &#224; &#233;t&#233; l&#8217;un des plus facile &#224;
-                    r&#233;aliser.
-                </div>
-            </div>
-
-
-            <footer>
-                <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
-                <p class="p-footer">@mthillayisnard
-                    <script>document.write(new Date().getFullYear())</script>
-                </p>
-                <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
-                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
-            </footer>
+    <footer>
+        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
+                class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+        <p class="p-footer">@mthillayisnard
+            <script>document.write(new Date().getFullYear())</script>
+        </p>
+        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png"
+                class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png"
+                class="img-footer"></a>
+    </footer>
 </body>
-
 </html>
