bouton découvrir le site lien

--- a/leria.html
+++ b/leria.html
@@ -43,7 +43,7 @@
                 </h1>
             </div>
             <div>
-                <button class="btn_decouvrir_site">
+                <button class="btn_decouvrir_site" onclick="window.location.href='http://leria-insurance.com/;'">
                     D&#233;couvrir le site
                 </button>
             </div>
