--- a/m/leria.html
+++ b/m/leria.html
@@ -7,23 +7,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="data/css/style-Leria.css">
-    <link rel="stylesheet" href="data/css/nav.css">
-    <link rel="stylesheet" href="data/css/footer.css">
+    <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style-Leria.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
-    <script src="data/js/device-redirect-computer.js"></script>
+    <script src="../data/js/device-redirect-computer.js"></script>
 </head>
 
 <body>
     <div class="header-background">
         <nav>
-            <a href="index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
-            <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
-            <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-            <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
+            <a href="../index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
+            <a href="../index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
+            <a href="../qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
+            <a href="../contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
+            <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
             <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">BE</button></a>
             <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">IN</button></a>
         </nav>
@@ -43,7 +43,7 @@
                 </h1>
             </div>
             <div>
-                <button class="btn_decouvrir_site">
+                <button class="btn_decouvrir_site" onclick="window.location.href='http://leria-insurance.com/;'">
                     D&#233;couvrir le site
                 </button>
             </div>
@@ -83,7 +83,7 @@
             </tr>
         </table>
     </div>
-    <img src="data/imgs/leria/LERIA-eolienne.jpg" alt="Illustration d'une &eacute;olienne" class="img-eolienne">
+    <img src="../data/imgs/leria/LERIA-eolienne.jpg" alt="Illustration d'une &eacute;olienne" class="img-eolienne">
     <div class="background-white">
         <div class="box-h2">
             <div class="box-le2">
@@ -125,7 +125,7 @@
             appliquer au site.
         </p>
         <div class="box-logo-leria">
-            <img class="logo_leria" src="data/imgs/leria/Leria.png" alt="Logo de LERIA">
+            <img class="logo_leria" src="../data/imgs/leria/Leria.png" alt="Logo de LERIA">
         </div>
 
         <div class="box-h2">
@@ -148,7 +148,7 @@
             l&#233;gaux.
         </p>
         <div class="box-img_wireframes">
-            <img class="img_wireframes" src="data/imgs/leria/Wireframes.jpg"
+            <img class="img_wireframes" src="../data/imgs/leria/Wireframes.jpg"
                 alt="Image d'illustation pour les wireframes">
         </div>
     </div>
@@ -187,7 +187,7 @@
             que des appels &agrave; l'action directs vers les offres, en plus du menu.
         </p>
         <div class="box-img-page-principale-leria">
-            <img src="data/imgs/leria/Wordpress-LERIA.jpg" alt="Image de la page d'accueil de LERIA"
+            <img src="../data/imgs/leria/Wordpress-LERIA.jpg" alt="Image de la page d'accueil de LERIA"
                 class="img-page-principale-leria">
         </div>
         <p class="text-corp">
@@ -201,9 +201,9 @@
             d'utiliser des pictogrammes pour soulager la vue.
         </p>
         <div class="box-img-page-presentation-leria">
-            <img src="data/imgs/leria/energies_renouvelables___LERIA.jpg"
+            <img src="../data/imgs/leria/energies_renouvelables___LERIA.jpg"
                 alt="Image de la page de pr&eacute;sentation de LERIA" class="img-page-presentation-leria">
-            <img src="data/imgs/leria/Immobilier–LERIA.jpg" alt="Image de la page de pr&eacute;sentation de LERIA"
+            <img src="../data/imgs/leria/Immobilier–LERIA.jpg" alt="Image de la page de pr&eacute;sentation de LERIA"
                 class="img-page-presentation-leria">
         </div>
         <p class="text-corp">
@@ -236,7 +236,7 @@
     </div>
 
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
+        <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
                 class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
